# EZCore

./: LICENSE  Makefile  Makefile.am  Makefile.in  README.md  autogen.sh  config.status  configure  configure.ac  link.c  meson.build  uname  uname.c
autom4te.cache/: output.0  output.1  output.3  requests  traces.0  traces.1  traces.2  traces.4
src/: chmod.c  date.c  link.c  uname.c  yes.c
