AC_INIT([date chmod link uname], [0.4], [ethanatchley2006@gmail.com])

AM_INIT_AUTOMAKE

AC_PROG_CC

AC_CONFIG_FILES([Makefile])

AC_CHECK_HEADERS([getopt.h])

AC_CHECK_HEADERS([stdio.h])

AC_CHECK_HEADERS([string.h])

AC_CHECK_HEADERS([sys/types.h])

AC_CHECK_HEADERS([unistd.h])

AC_CHECK_HEADERS([stdbool.h])

AC_CHECK_HEADERS([stdlib.h])

AC_CHECK_HEADERS([ctype.h])

AC_CHECK_HEADERS([sys/stat.h])

AC_CHECK_HEADERS([errno.h])

AC_CHECK_HEADERS([dirent.h])

AC_CHECK_HEADERS([time.h])

AC_CHECK_HEADERS([sys/utsname.h])

AC_OUTPUT
